# diario-crawler

./: .env.example  CHANGELOG.md  PLANS.md  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  arquitetura.md  desenvolvimento.md  glossario.md  guia-rapido.md  operacao.md  versioning.md  visao-geral.md
src/diario_crawler/cli/: run_crawler.py
src/diario_crawler/core/: crawler.py
src/diario_crawler/http/: client.py  concurrent.py
src/diario_crawler/parsers/: content.py  metadata.py  structure.py
src/diario_crawler/processors/: aggregator.py
src/diario_crawler/storage/: base.py  parquet.py
src/diario_crawler/utils/: logging.py
tests/: conftest.py  test_crawler.py  test_http_clients.py  test_storage_integration.py  test_structure_parser.py
tests/fixtures/vcr_cassettes/: test_concurrent_client_with_vcr.yaml  test_fetch_404.yaml  test_fetch_metadata_batch.yaml  test_fetch_success.yaml  test_structure_parser_empty.yaml  test_structure_parser_nested.yaml  test_structure_parser_regression.yaml
