[project]
name = "diario-crawler"
version = "0.1.1"
description = ""
readme = "README.md"
authors = [
  { name = "almeidadm", email = "almeidadm@outlook.com" }
]
requires-python = ">=3.12,<3.14"

dependencies = [
  "httpx[http2]>=0.28.1,<0.29.0",
  "selectolax>=0.4.0,<0.5.0",
  "rich>=14.2.0,<15.0.0",
  "pandas>=2.3.3,<3.0.0",
  "pyarrow>=22.0.0,<23.0.0",
  "duckdb>=1.4.1,<2.0.0",
  "polars>=1.35.1,<2.0.0",
  "sentence-transformers>=5.1.2,<6.0.0",
  "vcrpy>=7.0.0,<8.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "typer[all]>=0.15.1,<1.0.0",
  "unidecode>=1.4.0",
  "minio>=7.2.18",
  "diario-contract",
]

[project.scripts]
cli = "diario_crawler.cli.run_crawler:main"


[dependency-groups]
dev = [
  "ipykernel>=7.1.0,<8.0.0",
  "black>=25.9.0,<26.0.0",
  "isort>=7.0.0,<8.0.0",
  "flake8>=7.3.0,<8.0.0",
  "taskipy>=1.14.1,<2.0.0",
  "matplotlib>=3.10.7,<4.0.0",
  "tqdm[notebook]>=4.67.1,<5.0.0",
  "seaborn>=0.13.2,<0.14.0",
  "notebook>=7.4.7,<8.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.21.0,<1.0.0",
  "pytest-order>=1.3.0",
]


[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["diario_crawler"]
skip_gitignore = true

[tool.taskipy.tasks]
lint = "flake8 src"
format = "isort src && black src"
check = "task format && task lint"
test = "pytest tests/ -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "asyncio",
  "slow",
]

[tool.uv.sources]
diario-contract = { git = "ssh://git@github.com/almeidadm/diario-contract.git", rev = "v1.0.3" }
